@@ -5,7 +5,7 @@
 CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
-OBJS=FileLoader_ELF.o
+OBJS=FileLoader_aout.o FileLoader_ELF.o
 
 all: $(OBJS)
 
